# Human_following_Robot_Group7

./: .gitattributes  .gitignore  LICENSE  README.md  TurtleBot3_Follower_Scripts_Guide.docx  TurtleBot3_Human_Follower_Tutorial.docx  TurtleBot3_Human_Follower_Visual_Guide.docx
docs/: HOW_IT_WORKS.md  architecture.md
docs/setup/: 01-create-vm.md  02-install-ros.md  03-run-demo.md  04-run-sim-and-real.md
docs/superpowers/plans/: 2026-06-01-tb3-yolo-bt-follower.md
docs/superpowers/specs/: 2026-06-01-tb3-yolo-bt-follower-design.md
ros2_ws/src/tb3_follower_behavior/: package.xml  setup.cfg  setup.py
ros2_ws/src/tb3_follower_behavior/config/: follower_params.yaml
ros2_ws/src/tb3_follower_behavior/tb3_follower_behavior/: control.py  follower_bt_node.py  obstacle.py  tree.py
ros2_ws/src/tb3_follower_behavior/tb3_follower_behavior/behaviours/: __init__.py  actions.py  guards.py  helpers.py
ros2_ws/src/tb3_follower_behavior/test/: test_control.py  test_obstacle.py  test_tree_ticks.py
ros2_ws/src/tb3_follower_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/tb3_follower_bringup/launch/: behavior.launch.py  follower.launch.py  perception.launch.py  sim.launch.py  sim_headless.launch.py
ros2_ws/src/tb3_follower_bringup/rviz/: follower.rviz
ros2_ws/src/tb3_follower_bringup/worlds/: follow_world.world
ros2_ws/src/tb3_follower_gui/: package.xml  setup.cfg  setup.py
ros2_ws/src/tb3_follower_gui/tb3_follower_gui/: dashboard.py
ros2_ws/src/tb3_follower_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/tb3_follower_msgs/msg/: PersonDetection.msg
ros2_ws/src/tb3_follower_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/tb3_follower_perception/config/: detector_params.yaml
ros2_ws/src/tb3_follower_perception/tb3_follower_perception/: geometry.py  person_detector_node.py
ros2_ws/src/tb3_follower_perception/test/: test_geometry.py
scripts/: 00-bootstrap-vm.sh  02-install-ros.sh  03-install-yolo.sh  04-build-workspace.sh  05-run-demo.sh  06-follow-real.sh
