<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_follower_bringup</name>
  <version>0.1.0</version>
  <description>Launch files, Gazebo world, and RViz config for the TB3 follower demo.</description>
  <maintainer email="midhunr2015@gmail.com">Midhun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>tb3_follower_perception</exec_depend>
  <exec_depend>tb3_follower_behavior</exec_depend>
  <exec_depend>tb3_follower_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
