<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_follower_gui</name>
  <version>0.1.0</version>
  <description>PyQt5 dashboard for monitoring + controlling the TB3 human-follower demo.</description>
  <maintainer email="midhunr2015@gmail.com">Midhun</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>tb3_follower_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
